# xFetch_v4

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  rust-toolchain.toml
src/: distro.rs  hostname.rs  init.rs  macros.rs  main.rs  packages.rs  shell.rs  uptime.rs
