[package]
name = "xfetch"
version = "4.0.0" # Pushed v3.1.0 and I forgor to update the version in Cargo.toml :bigbrain:
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "io-util", "fs"] }
sysinfo_dot_h = "0.2.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
